Item/k8s/mysql.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-mysql
  namespace: nakupovalko
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item-mysql
  template:
    metadata:
      labels:
        app: item-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: item-mysql-data
              mountPath: /var/lib/mysql
            - name: item-mysql-initdb-config
              mountPath: /docker-entrypoint-initdb.d


      volumes:
        - name: item-mysql-data
          emptyDir: { }
        - name: item-mysql-initdb-config
          configMap:
            name: item-mysql-initdb-config
---
apiVersion: v1
kind: Service
metadata:
  name: item-mysql
  namespace: nakupovalko
spec:
  selector:
    app: item-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
#  type: LoadBalancer
